[gd_scene load_steps=4 format=3 uid="uid://b7nlh17uocd64"]

[ext_resource type="Script" path="res://scenes/windows/quest_creature_selector.gd" id="1_abc12"]
[ext_resource type="LabelSettings" uid="uid://cjqum8bi2y1sn" path="res://assets/heading.tres" id="1_u8kuj"]
[ext_resource type="LabelSettings" uid="uid://cn7nw2emmla6n" path="res://assets/x.tres" id="2_p8mlq"]

[node name="QuestCreatureSelector" type="CanvasLayer"]
script = ExtResource("1_abc12")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -400.0
offset_right = 400.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"DefaultPanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select Creatures for Quest"
label_settings = ExtResource("1_u8kuj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuestInfo" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SelectedInfo" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Selected 0/1"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="Button2" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Turn In"
